LB-82 default input text cutoff fix

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -557,6 +557,10 @@ span.postfix_val {
       height: 2.5rem;
       input[type="text"] {
         height: 2rem !important;
+
+        &.default {
+          width: 100% !important;
+        }
       }
     }
   }
